# OnChain360

./: .gitignore  LICENSE  README.md  dfx.json
.dfx/local/: canister_ids.json  wallets.json
.dfx/local/canisters/backend/: index.js  service.did.d.ts  service.did.js
.dfx/local/canisters/frontend/: index.js
.dfx/local/canisters/onchain360_backend/: constructor.did  index.js  service.did.d.ts
.dfx/local/lsp/: uxrrr-q7777-77774-qaaaq-cai.did  uzt4z-lp777-77774-qaabq-cai.did
.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
.dfx/network/local/state/replicated_state/: ic.json5  topology.json
.dfx/network/local/state/replicated_state/17ee969f4d56997f3cb9c0221c0f3f903d631a7c1a552782824808c315d8356a/: states_metadata.pbuf
backend/: Cargo.toml  backend.did
backend/src/: auth.rs  lib.rs  models.rs  storage.rs  utils.rs
frontend/: jsconfig.json  package-lock.json  package.json
frontend/src/: App.js  ic.js  index.js
frontend/src/components/: UserImage.jsx
frontend/src/declarations/onchain360_backend/: onchain360_backend.did  onchain360_backend.did.js
frontend/src/scenes/homePage/: index.jsx
frontend/src/scenes/loginPage/: index.jsx
frontend/src/scenes/navbar/: index.jsx
frontend/src/scenes/profilePage/: index.jsx
frontend/src/scenes/widgets/: FriendListWidget.jsx  MyPostWidget.jsx  PostWidget.jsx  PostsWidget.jsx  UserWidget.jsx
frontend/src/state/: index.js
(+43 files in other folders)
