[package]
name = "onchain360_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-cdk = "0.10.0"            # Core IC canister development kit
ic-cdk-macros = "0.10.0"     # Macros like #[update] and #[query]

# Add serde if you want to serialize/deserialize data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
